[package]
name = "reactive_cache"
version = "0.1.0"
edition = "2024"
description = "A lightweight, dependency-aware memoization library with automatic invalidation and lazy recomputation."
repository = "https://github.com/fxdmhtt/ReactiveCache"
license = "GPL-2.0"
keywords = ["cache", "reactive"]
categories = ["caching"]

[dependencies]
lru = "0.16.0"
mvvm = "0.2.1"
once_cell = "1.21.3"
