[package]
name = "reactive-cache"
version = "0.4.0"
edition = "2024"
authors = ["Junkang Yuan <yuanjunkang@gmail.com>"]
description = "A lightweight, dependency-aware memoization library with automatic invalidation and lazy recomputation."
repository = "https://github.com/fxdmhtt/ReactiveCache"
license = "GPL-2.0"
keywords = ["cache", "reactive"]
categories = ["caching"]

[dependencies]
lru = "0.16.0"
once_cell = "1.21.3"

reactive-macros = { version = "0.4.0-alpha.0", path = "../macros", optional = true }

[dev-dependencies]
reactive-macros = { path = "../macros" }

[features]
default = []

macros = ["reactive-macros"]
