[package]
name = "reactive-macros"
version = "0.3.4"
edition = "2024"
authors = ["Junkang Yuan <yuanjunkang@gmail.com>"]
description = "A lightweight, dependency-aware memoization library with automatic invalidation and lazy recomputation."
repository = "https://github.com/fxdmhtt/ReactiveCache"
license = "GPL-2.0"
keywords = ["cache", "reactive"]
categories = ["caching"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

[dev-dependencies]
reactive-cache = { path = "../cache" }
